8259765: ZGC: Handle incorrect processor id reported by the operating system